force-app/main/default/objects/SVMXA360__CONF_LookupConfiguration__c/SVMXA360__CONF_LookupConfiguration__c.object-meta.xml
<CustomObject>
    <description>Stores lookup config configured for lookup fields.</description>
    <label>Lookup Configuration</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>