force-app/main/default/objects/SVMXA360__CONF_LookupConfiguration__c/fields/SVMXA360__BasicFilter__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__BasicFilter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to an Expression that will be applied to the lookup results.</description>
    <label>Basic Filter</label>
    <referenceTo>SVMXA360__CONF_Expression__c</referenceTo>
    <relationshipLabel>Basic Filters</relationshipLabel>
    <relationshipName>Lookup_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>