force-app/main/default/objects/SVMXA360__CONF_LookupConfiguration__c/fields/SVMXA360__DefaultLookupforObject__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DefaultLookupforObject__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled, the lookup config will be made default for the selected object.</description>
    <label>Default Lookup for Object</label>
    <type>Checkbox</type>
</CustomField>