force-app/main/default/objects/SVMXA360__CONF_LookupConfiguration__c/fields/SVMXA360__DefaultOperator__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DefaultOperator__c</fullName>
    <description>The default operator for applying filters.</description>
    <label>Default Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Starts With</fullName>
            </value>
            <value>
                <fullName>Ends With</fullName>
            </value>
            <value>
                <fullName>Exact Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>