force-app/main/default/objects/SVMXA360__CONF_LookupConfiguration__c/fields/SVMXA360__DisplayFields__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DisplayFields__c</fullName>
    <description>Object fields to be displayed on the lookup search results.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Display Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>