force-app/main/default/objects/SVMXA360__CONF_LookupConfiguration__c/fields/SVMXA360__ExtendedFields__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ExtendedFields__c</fullName>
    <description>Object fields to be displayed on the tooltip for the selected record.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Extended Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>