force-app/main/default/objects/SVMXA360__CONF_LookupConfiguration__c/fields/SVMXA360__FieldToReturn__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__FieldToReturn__c</fullName>
    <description>Field to return for the selected record from the lookup result</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Field To Return</label>
    <length>100</length>
    <type>Text</type>
</CustomField>