force-app/main/default/objects/SVMXA360__CONF_LookupConfiguration__c/fields/SVMXA360__ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ObjectAPIName__c</fullName>
    <description>API name of the object on which the lookup is configured</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Object API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>