force-app/main/default/objects/SVMXA360__CONF_LookupConfiguration__c/fields/SVMXA360__RecordsPerPageReturn__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__RecordsPerPageReturn__c</fullName>
    <description>Number of records to be returned on the search results in a single page.</description>
    <label>Return to RecordsPerPage</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>