force-app/main/default/objects/SVMXA360__CONF_LookupConfiguration__c/fields/SVMXA360__SearchFields__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SearchFields__c</fullName>
    <description>Object fields to be searched on the lookup records search</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Search Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>